--- a/.github/workflows/securityScan.yml
+++ b/.github/workflows/securityScan.yml
@@ -1,33 +1,31 @@
 name: Python Security Scan
 
 on:
-push:
-  branches:
-    - main 
-pull_request:
-  branches:
-    - main 
+  push:
+    branches:
+      - main 
+  pull_request:
+    branches:
+      - main 
 
 jobs:
   security-scan:
     runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout branch
-      uses: actions/checkout@v2
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
 
-    - name: Setupm Python 3.10  
-      uses: actions/setup-python@v3
-      with:
-        python-version: python3.10
+      - name: Setup Python 3.10  
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'  # Corrected the version specification
 
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install bandit
-
-    - name: Running bandit
-      run: |
-        bandit -r .
-  
+      - name: Run Bandit
+        run: |
+          bandit -r .
