--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,23 @@
     <version>1.0-SNAPSHOT</version>
     
     <dependencies>
-        <!-- Other dependencies ... -->
+        
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.30</version> <!-- Vulnerable version -->
+            <version>1.30</version> 
         </dependency>
-        <!-- Other dependencies ... -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.3.3</version>
+        </dependency>
     </dependencies>
     
-    <!-- Build configuration, plugins, and other settings ... -->
+    
 </project>
