--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -30,7 +30,7 @@ jobs:
       run: snyk auth ${{ secrets.SNYK_TOKEN }}
     
     - name: Test for vulnerabilities
-      run: snyk test
+      run: snyk test --all-projects
 
     - name: Monitor project
       run: snyk monitor
