--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -23,10 +23,12 @@ jobs:
 
     - name: Run OWASP Dependency-Check
       uses: dependency-check/Dependency-Check_Action@main
+      env:
+        JAVA_HOME: /opt/jdk
       with:
         project: 'checkin'
         format: 'HTML'
-        output-directory: './dependency-check-report'
+        out: './dependency-check-report'
 
     - name: Upload Dependency-Check report
       uses: actions/upload-artifact@v2
