--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -15,16 +15,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'adopt'
+    - name: Build project with Maven
+      run: | 
+          cd simple/
+          mvn clean install
 
     - name: Run OWASP Dependency-Check
       uses: dependency-check/Dependency-Check_Action@main
-      env:
-        JAVA_HOME: /opt/jdk
+      # env:
+      #   JAVA_HOME: /opt/jdk
       with:
         project: 'checkin'
         format: 'HTML'
