--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -15,16 +15,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Build project with Maven
-      run: | 
-          cd simple/
-          mvn clean install
-
     - name: Run OWASP Dependency-Check
       uses: dependency-check/Dependency-Check_Action@main
-      # env:
-      #   JAVA_HOME: /opt/jdk
       with:
+        project: 'checkin'
+        scan-path: '.'
         format: 'HTML'
         out: './dependency-check-report'
 
