--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -19,7 +19,7 @@ jobs:
       uses: dependency-check/Dependency-Check_Action@main
       with:
         project: 'checkin'
-        scan-path: '.'
+        path: '.'
         format: 'HTML'
         out: './dependency-check-report'
 
