--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -1,5 +1,4 @@
 name: OWASP Security Scan
-
 on:
   push:
     branches:
@@ -7,24 +6,34 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   dependency-check:
-    name: Dependency-Check
     runs-on: ubuntu-latest
-    steps: 
-      - name: Download OWASP Dependency Check
-        run: |
-          VERSION=$(curl -s https://jeremylong.github.io/DependencyCheck/current.txt)
-          curl -sL "https://github.com/jeremylong/DependencyCheck/releases/download/v$VERSION/dependency-check-$VERSION-release.zip" --output dependency-check.zip
-          unzip dependency-check.zip
-      - name: Run Dependency Check
-        run: |
-          ./dependency-check/bin/dependency-check.sh --out report.html --scan .
-          rm -rf dependency-check*
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifacts
-          path: report.html
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '8'
+
+    - name: Build project with Maven
+      run: mvn clean install
+
+    - name: Run OWASP Dependency-Check
+      uses: dependency-check/Dependency-Check_Action@main
+      env:
+          JAVA_HOME: /opt/jdk
+      with:
+        project: 'checkin'
+        path: '.'
+        format: 'HTML'
+        output-directory: './dependency-check-report'
+
+    - name: Upload Dependency-Check report
+      uses: actions/upload-artifact@v2
+      with:
+        name: dependency-check-report
+        path: ./dependency-check-report
