--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -21,6 +21,17 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
 
+    - name: Setup Python 3.10  
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
+
+
+    - name: Install Dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+    
     - name: Set up Snyk
       uses: snyk/actions/setup@master
       with:
