--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "example-project",
   "version": "1.0.0",
   "dependencies": {
-    "hoek": "4.2.0" // Vulnerable version
+    "hoek": "4.2.0"
   }
 }
