--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -7,33 +7,23 @@ on:
     branches:
       - main
 jobs:
-  dependency-check:
+  depchecktest:
     runs-on: ubuntu-latest
+    name: depecheck_test
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '8'
-
-    - name: Build project with Maven
-      run: mvn clean install
-
-    - name: Run OWASP Dependency-Check
-      uses: dependency-check/Dependency-Check_Action@main
-      env:
-          JAVA_HOME: /opt/jdk
-      with:
-        project: 'checkin'
-        path: '.'
-        format: 'HTML'
-        out: './dependency-check-report'
-
-    - name: Upload Dependency-Check report
-      uses: actions/upload-artifact@v2
-      with:
-        name: dependency-check-report
-        path: ./dependency-check-report
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build project with Maven
+        run: mvn clean install
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'test'
+          path: '.'
+          format: 'HTML'
+      - name: Upload Test results
+        uses: actions/upload-artifact@master
+        with:
+           name: Depcheck report
+           path: ${{github.workspace}}/reports
