--- a/.github/workflows/owaspCheck.yml
+++ b/.github/workflows/owaspCheck.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build project with Maven
-        run: mvn clean install
+        run: | 
+          mvn clean install
+          npm install
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
