--- a/.github/workflows/pythonLinter.yml
+++ b/.github/workflows/pythonLinter.yml
@@ -27,4 +27,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_JAVA: true
-          VALIDATE_PYTHON_FLAKE8: true
+          VALIDATE_PYTHON_FLAKE8: false
