--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -28,11 +28,11 @@ jobs:
         python-version: '3.10'
 
 
-    - name: Install Dependencies
-      run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          npm install
+    # - name: Install Dependencies
+    #   run: |
+    #       python -m pip install --upgrade pip
+    #       pip install -r requirements.txt
+    #       npm install
     
     - name: Set up Snyk
       uses: snyk/actions/setup@master
@@ -43,7 +43,7 @@ jobs:
       run: snyk auth ${{ secrets.SNYK_TOKEN }}
     
     - name: Test for vulnerabilities
-      run: snyk test --all-projects
+      run: snyk test --file=requirements.txt
 
     - name: Monitor project
       run: snyk monitor
