--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -12,38 +12,44 @@ jobs:
   snyk:
     name: Snyk Security Scan
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'adopt'
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '8'
 
-    - name: Setup Python 3.10  
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14.19.3'
 
-    # - name: Install Dependencies
-    #   run: |
-    #       python -m pip install --upgrade pip
-    #       pip install -r requirements.txt
-    #       npm install
-    
-    - name: Set up Snyk
-      uses: snyk/actions/setup@master
-      with:
-        version: 'latest'
-    
-    - name: Authenticate Snyk
-      run: snyk auth ${{ secrets.SNYK_TOKEN }}
-    
-    - name: Test for vulnerabilities
-      run: snyk test --file=requirements.txt
+      - name: Snyk Scan for Maven (pom.xml)
+        uses: snyk/actions/maven@v2
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: test --file=pom.xml
 
-    - name: Monitor project
-      run: snyk monitor
+      - name: Snyk Scan for Python (requirements.txt)
+        uses: snyk/actions/python@v2
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: test --file=requirements.txt
+
+      - name: Snyk Scan for Node.js (package.json)
+        uses: snyk/actions/node@v2
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: test --file=package.json
