--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -34,21 +34,21 @@ jobs:
           node-version: '14.19.3'
 
       - name: Snyk Scan for Maven (pom.xml)
-        uses: snyk/actions/maven@v2
+        uses: snyk/actions/maven@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: test --file=pom.xml
 
       - name: Snyk Scan for Python (requirements.txt)
-        uses: snyk/actions/python@v2
+        uses: snyk/actions/python@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: test --file=requirements.txt
 
       - name: Snyk Scan for Node.js (package.json)
-        uses: snyk/actions/node@v2
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
