--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -33,12 +33,12 @@ jobs:
         with:
           node-version: '14.19.3'
 
-      - name: Snyk Scan for Maven (pom.xml)
-        uses: snyk/actions/maven@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: test --file=pom.xml
+      # - name: Snyk Scan for Maven (pom.xml)
+      #   uses: snyk/actions/maven@master
+      #   env:
+      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      #   with:
+      #     args: test --file=pom.xml
 
       - name: Snyk Scan for Python (requirements.txt)
         uses: snyk/actions/python@master
