--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -1,24 +1,45 @@
-name: Snyk Scan
+name: Snyk Security Scan
 
-on: [push]
+on:
+  pull_request:
+    branches: [test_test_test]
 
 jobs:
   snyk:
+    name: Snyk Security Scan
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
         with:
-          node-version: '14'
+          java-version: '8'
+          distribution: 'adopt'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Setup Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Install Dependencies
+        run: |
+          # python -m pip install --upgrade pip
+          # pip install -r requirements.txt
+          npm install
+
+      - name: Set up Snyk
+        uses: snyk/actions/setup@master
+        with:
+          version: 'latest'
+
+      - name: Authenticate Snyk
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
+      - name: Test for vulnerabilities
+        run: snyk test --all-projects
+
+      - name: Monitor project
+        run: snyk monitor
