--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -20,18 +20,6 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
 
-      - name: Setup Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-
-
-      - name: Install Dependencies
-        run: |
-          # python -m pip install --upgrade pip
-          # pip install -r requirements.txt
-          npm install
-
       - name: Set up Snyk
         uses: snyk/actions/setup@master
         with:
@@ -41,5 +29,8 @@ jobs:
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
       - name: Test for vulnerabilities
-        run: snyk test --all-projects
+        run: snyk test pom.xml 
+
+      - name: Test for JS Vulnerabilties
+        run: snyk test package.json
 
