--- a/.github/workflows/snykChecker.yml
+++ b/.github/workflows/snykChecker.yml
@@ -33,5 +33,5 @@ jobs:
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
       - name: Test for JS Vulnerabilties
-        run: snyk test --all-projects
+        run: snyk test --all-projects --skip-unresolved
 
