--- a/.github/workflows/javaChecker.yml
+++ b/.github/workflows/javaChecker.yml
@@ -20,3 +20,4 @@ jobs:
         uses: gps/intellij-inspections@master
         with:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          INSPECTIONS_FILE: Inspections.xml
