--- a/.github/workflows/javaChecker.yml
+++ b/.github/workflows/javaChecker.yml
@@ -14,10 +14,43 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+      name: CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  inspect:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '8'
+        distribution: 'adopt'
+
+    - name: Run IntelliJ Inspections
+      uses: gps/intellij-inspections@master
+      with:
+        project-root: ${{ github.workspace }}
+        profile-path: .idea/inspectionProfiles/Project_Default.xml
+        output-path: inspection-results
+        options: '-profilePath .idea/inspectionProfiles/Project_Default.xml -format xml'
+      continue-on-error: true
+
+    - name: Upload inspection results
+      uses: actions/upload-artifact@v2
+      with:
+        name: inspection-results
+        path: inspection-results
+
 
     - name: Run IntelliJ Inspections
       uses: gps/intellij-inspections@master
