--- a/.github/workflows/javaChecker.yml
+++ b/.github/workflows/javaChecker.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '8'
+        distribution: 'adopt'
 
     - name: Download IntelliJ IDEA CLI
       run: |
