--- a/.github/workflows/javaPMD.yml
+++ b/.github/workflows/javaPMD.yml
@@ -22,16 +22,20 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
 
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
-      with:
-        distribution: 'adopt'
-        java-version: '8'
-    - uses: pmd/pmd-github-action@v2
+    - name: Run PMD Analysis
+      uses: pmd/pmd-github-action@v2
       with:
         rulesets: 'ruleset.xml'
         analyzeModifiedFilesOnly: false
+
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: pmd-report.sarif
+
+    - name: Display Logs for Debugging
+      run: |
+        echo "PMD Analysis Completed"
+        cat pmd-report.sarif
+        ls -la
+        echo "Done"
