--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -32,7 +32,7 @@ jobs:
         id: pmd
         uses: pmd/pmd-github-action@v2
         with:
-          rulesets: 'ruleset/xml'
+          rulesets: 'ruleset.xml'
           analyzeModifiedFilesOnly: false
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
